Replaced isBlank() with isEmpty()
To comply with Java 8